--- a/ConfigServer/pom.xml
+++ b/ConfigServer/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--eureka-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-start-eureka-server</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
