--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
           username: #公开仓库不需要账号密码
           password:
       label: master #分支
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8000/eureka/ #eureka服务注册中心
