高可用配置中心

--- a/ConfigClient/src/main/resources/application.yml
+++ b/ConfigClient/src/main/resources/application.yml
@@ -17,8 +17,16 @@ spring:
       profile: dev #dev/test/pro  #配置文件名的{profile}部分
       uri: http://localhost:8888/ #指定配置服务中心地址
       name: config-client #读取的配置文件名的{application}部分
+      discovery:
+        enabled: true #开启Config服务发现支持
+        service-id: config-server #config-server 的spring-application-name
 
 #SpringBoot 1.5.X 以上默认开通了安全认证
 management:
   security:
     enabled: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
