--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -17,5 +17,5 @@ spring:
 
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8000/eureka/ #eureka服务注册中心
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
